# Korpusanalyse-mit-Python

./: .gitignore  NumpyPandas.ipynb  README.md  Stats.ipynb  pyproject.toml
.binder/: postBuild
.github/workflows/: ci.yml
Daten_EL/Dataframes/Deixis/: Erbauungsbuch.csv  Gebetbuch.csv  Leichenpredigten.csv
Daten_EL/Korpora/DTABf/Erbauungsbuch/: hecht_andachten_1668.xml  luettkemann_harpffe_1674.xml  scriver_schaefflein_1672.xml
Daten_EL/Korpora/DTABf/Gebetbuch/: baumann_gebetbuch_1676.xml  deucer_gebetbuch_1665.xml  habermann_gebete_1659.xml  lohner_geistliche04_1684.xml  schwendendoerffer_andaechtige_1637.xml  zesen_gebetbuch_1660.xml
Daten_EL/Korpora/Derivate/Erbauungsbuch/: felgenhauer_jehior_1640.txt  hecht_andachten_1668.txt  luettkemann_harpffe_1674.txt  santa_judas01_1686.txt  schottel_hoelle_1676.txt  scriver_schaefflein_1672.txt  spener_friede_1686.txt
Daten_EL/Korpora/Derivate/Gebetbuch/: baumann_gebetbuch_1676.txt  deucer_gebetbuch_1665.txt  habermann_gebete_1659.txt  lohner_geistliche04_1684.txt  schwendendoerffer_andaechtige_1637.txt  zesen_gebetbuch_1660.txt
Daten_EL/Korpora/Derivate/Leichenpredigten/: 347551.txt  353338.txt  354493.txt  354527.txt  354531.txt  358833.txt  359996.txt  360677.txt  509379.txt
Daten_EL/Korpora/xml-ling/Erbauungsbuch/: felgenhauer_jehior_1640.xml  hecht_andachten_1668.xml  spener_friede_1686.xml
Daten_EL/Korpora/xml-ling/Gebetbuch/: baumann_gebetbuch_1676.xml  habermann_gebete_1659.xml  schwendendoerffer_andaechtige_1637.xml
Daten_EL/Korpora/xml-ling/Leichenpredigten/: 347551.xml  353338.xml  354493.xml  354527.xml  354531.xml  358833.xml  359996.xml  360677.xml  509379.xml
